Remove headers used by services to call login service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
           filters:
             - JwtValidation
             - RemoveRequestHeader=Authorization
+            - RemoveRequestHeader=x-service
 
         - id: website-2
           uri: http://localhost:8100/
